--- a/packages/bot/package.json
+++ b/packages/bot/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "package-2",
+  "name": "bot",
   "version": "1.0.0",
   "main": "index.js",
-  "license": "MIT",
   "scripts": {
-    "start": "echo start package-2"
+    "start": "echo start bot"
   },
   "dependencies": {
+    "telegraf": "^4.15.3"
   }
 }
